# ExplainMyBody

./: .gitignore  README.md  main.py  pyproject.toml
ExplainMyBody_backup/: promptmaking_ex1.txt
ExplainMyBody_backup/experiments/llm/: .gitignore  LG_GUIDE.md  LLM모델 실행 명령어.md  claude_client.py  langgraph_pipeline.py  models.py  ollama_client.py  openai_client.py  prompt_generator_claude.py  prompt_generator_gpt.py  pyproject.toml  requirements.txt  rulebase.py  rulebase_wrapper.py  run_pipeline.py  run_pipeline_claude.py  run_pipeline_gpt.py  sample_profiles.json
ExplainMyBody_backup/experiments/llm/.serena/memories/: suggested_commands.md
ExplainMyBody_backup/experiments/llm/outputs/1주운동계획:qwen3.14b_gpt/: prompt프롬프트.txt  김철수_20260122_203004.json  김철수_20260122_203004_recommendations.md  김태현_20260122_203246.json  김태현_20260122_203246_recommendations.md  박민수_20260122_203107.json  박민수_20260122_203107_recommendations.md  박서연_20260122_203405.json  박서연_20260122_203405_recommendations.md  송민재_20260122_203436.json  송민재_20260122_203436_recommendations.md  이영희_20260122_203036.json  이영희_20260122_203036_recommendations.md  이준호_20260122_203324.json  이준호_20260122_203324_recommendations.md  정수진_20260122_203213.json  정수진_20260122_203213_recommendations.md  최강훈_20260122_203140.json  최강훈_20260122_203140_recommendations.md  한지우_20260122_203516.json  한지우_20260122_203516_recommendations.md
ExplainMyBody_backup/experiments/llm/outputs/1주운동계획:qwen3:14b_claude/: prompt프롬프트.txt  김철수_20260122_202007.json  김철수_20260122_202007_recommendations.md  김태현_20260122_202346.json  김태현_20260122_202346_recommendations.md  박민수_20260122_202142.json  박민수_20260122_202142_recommendations.md  박서연_20260122_202517.json  박서연_20260122_202517_recommendations.md  송민재_20260122_202603.json  송민재_20260122_202603_recommendations.md  이영희_20260122_202054.json  이영희_20260122_202054_recommendations.md  이준호_20260122_202432.json  이준호_20260122_202432_recommendations.md  정수진_20260122_202305.json  정수진_20260122_202305_recommendations.md  최강훈_20260122_202222.json  최강훈_20260122_202222_recommendations.md  한지우_20260122_202648.json  한지우_20260122_202648_recommendations.md
ExplainMyBody_backup/experiments/llm/outputs/sample_output_raw/: sample8_output_raw.txt
OCR/: .dockerignore  Dockerfile  app.py  docker-compose.yml  inbody_matcher.py  inbody_result.json  inbody_result_structured.json  index.html  pyproject.toml  run.sh
(+100 files in other folders)
