[project]
name = "explainmybody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "paddlepaddle==2.5.2",
    "paddleocr==2.7.0",
    "numpy<2.0.0",
    "pillow>=10.0.0",
    "shapely",
    "scikit-image",
    "pyclipper",
    "lmdb",
    "tqdm",
    "rapidfuzz",
    "cython",
    "pyyaml",
    "requests",
    "albumentations<=1.4.11",
    "packaging",
    "pdfplumber",
    "opencv-python<=4.6.0.66",
]