[project]
name = "dynamic-crop-ocr"
version = "0.1.0"
description = "Dynamic region-based OCR using PaddleOCR"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "paddlepaddle>=3.0.0,<3.1.0",
    "paddleocr>=3.0.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "numpy<2.0.0",
    "pillow>=10.0.0",
    "shapely",
    "scikit-image",
    "pyclipper",
    "lmdb",
    "tqdm",
    "rapidfuzz",
    "cython",
    "pyyaml",
    "requests",
    "albumentations<=1.4.11",
    "packaging",
    "pdfplumber",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "werkzeug>=3.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.uv]
# 1. 의존성 해결 전략: 모든 인덱스를 뒤져서 최적의 버전을 찾도록 강제
index-strategy = "unsafe-best-match"
# 2. 환경 제한: 불필요한 macOS(darwin) 계산을 방지하여 충돌 원천 차단
environments = ["sys_platform == 'linux'"]

# 3. 인덱스 설정 (순서가 중요합니다)
# PyPI를 기본 인덱스로 설정하여 albumentations 1.4.11을 여기서 먼저 찾게 합니다.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Paddle 전용 인덱스는 격리(explicit)하여 다른 패키지가 이 인덱스를 오염시키지 않게 합니다.
[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true 

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
